--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,6 @@ authors = ["Crazy-Owl <stalker401@gmail.com>"]
 rand = "*"
 
 [dependencies.sdl2]
-branch = "master"
-git = "https://github.com/AngryLawyer/rust-sdl2"
+version = "0.29"
 default-features = false
 features = ["image", "ttf"]
