use lazy_static macro to get rid of code repetition

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Crazy-Owl <stalker401@gmail.com>"]
 
 [dependencies]
 rand = "*"
+lazy_static = "*"
 
 [dependencies.sdl2]
 version = "0.29"
